# dotfiles

./: .clang-format  README.md  copy_to_cwd.py  pyproject.toml
